fix window save overlaps

--- a/src/scss/modules/_dropdown.scss
+++ b/src/scss/modules/_dropdown.scss
@@ -1,6 +1,6 @@
 .dropdown {
   width: 216px;
-  height: 320px;
+  height: 185px;
   padding: 4px;
   border: 1px solid $lighter;
   background: $light;
